Updates from Overleaf

--- a/Algorithms/sorting/bubble_sort.tex
+++ b/Algorithms/sorting/bubble_sort.tex
@@ -1,5 +1,7 @@
 \documentclass[knowledge.tex]{subfiles}
 
+
 \begin{document}
-    \subfile{title.tex}
+    \section{Insert Sort}
+    Kakaroto
 \end{document}
