--- a/Python/0_basics/build.tex
+++ b/Python/0_basics/build.tex
@@ -4,10 +4,6 @@
 \rhead{\textbf{\textit{Python - Podstawy}}}
 
 \begin{document}
-    \chapter{Podstawy}
-    a
-    \newpage
-    \section{as}
-    s
-    % \subfile{./0_Title_page.tex}
+    \part{Podstawy}
+    \subfile{data_structures.tex}
 \end{document}
