--- a/Python/create.tex
+++ b/Python/create.tex
@@ -1,6 +1,8 @@
 \documentclass[knowledge.tex]{subfiles}
 
 \begin{document}
+    
     \subfile{title.tex}
-    \subfile{0_basics/run.tex}
+    \tableofcontents
+    \subfile{0_basics/build.tex}
 \end{document}
