--- a/Algorithms/sorting/build.tex
+++ b/Algorithms/sorting/build.tex
@@ -5,5 +5,10 @@
 
 \begin{document}
     \chapter{Sortowanie}
-    % \subfile{data_structures.tex}
+    \subfile{insert_sort.tex}
+    \subfile{bubble_sort.tex}
+    \subfile{quick_sort.tex}
+    \subfile{merge_sort.tex}
+    \subfile{heap_sort.tex}
+
 \end{document}
