--- a/Algorithms/sorting/build.tex
+++ b/Algorithms/sorting/build.tex
@@ -5,10 +5,11 @@
 
 \begin{document}
     \chapter{Sortowanie}
+    \subfile{introduction.tex}
     \subfile{insert_sort.tex}
     \subfile{bubble_sort.tex}
     \subfile{quick_sort.tex}
     \subfile{merge_sort.tex}
     \subfile{heap_sort.tex}
-
+    \subfile{research_platform.tex}
 \end{document}
