--- a/knowledge.tex
+++ b/knowledge.tex
@@ -14,10 +14,10 @@
 \usepackage{lipsum}
 \usepackage{graphicx}
 \usepackage{fancyhdr}
-
+\usepackage{scrextend}
 \usepackage{etoolbox}
 \patchcmd{\chapter}{\thispagestyle{plain}}{\thispagestyle{fancy}}{}{}
-
+\usepackage[ruled,vlined]{algorithm2e}
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
