Updates from Overleaf

--- a/Algorithms/create.tex
+++ b/Algorithms/create.tex
@@ -2,6 +2,9 @@
 
 \begin{document}
     \subfile{title.tex}
-    \tableofcontents
+        \tableofcontents
+
+    \rhead{\textbf{\textit{Algorytmy i Struktury Danych}}}
+
     \subfile{sorting/build.tex}
 \end{document}
