--- a/Algorithms/sorting/introduction.tex
+++ b/Algorithms/sorting/introduction.tex
@@ -2,5 +2,5 @@
 
 \begin{document}
     \section{Wprowadzenie}
-    Algorytmem sortowania nazywamy algorytm, który który porządkuje elementy listy w określonej kolejności. 
+    Algorytmem sortowania nazywamy algorytm, który który porządkuje elementy listy w określonej kolejności. Sortowanie jest nieodłącznym elementem programowania. Wyobraźmy sobie przykładowo indeks elektroniczny dla studentów i prowadzących. Listy uczestników z reguły są uporządkowane alfabetycznie. Kiedy mamy do czynienia z książką telefoniczną (dzisiaj już raczej z aplikacją kontakty w naszych telefonach) uporządkowane, co umożliwia nam szybsze odnalezienie konkretnej osoby. Do tego przykładu jeszcze wrócimy i zastanowimy się razem jak najszybciej rozwiązać takie zadanie. Przejdźmy teraz już do omówienia algorytmów sortowania wraz z przykładami.
 \end{document}
