--- a/knowledge.tex
+++ b/knowledge.tex
@@ -26,7 +26,9 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 \newcommand*{\currentname}{\@currentlabelname}
-
+\newtheorem{definition}{Definition}[section]
+\usepackage{qtree}
+\usepackage[noend]{algpseudocode}
 \setlength\headheight{40pt}
 \addtolength{\textheight}{-40.0pt}
 \lhead{\includegraphics[width=.2\textwidth]{inv.png}}
